[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Bush4.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Bush5.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Bush2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Bush3.png" type="Texture" id=4]
[ext_resource path="res://Sounds/bushhit.wav" type="AudioStream" id=5]
[ext_resource path="res://Scripts/Bush.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Bush1.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.4889, 10.3703 )

[node name="Bush" type="Area2D" groups=[
"tree",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.302139, -4.66299 )
shape = SubResource( 1 )

[node name="Bush1" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -8.5 )
texture = ExtResource( 3 )

[node name="Bush2" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -7.5 )
texture = ExtResource( 1 )

[node name="Bush3" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -12 )
texture = ExtResource( 2 )

[node name="Bush4" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -8.5 )
texture = ExtResource( 7 )

[node name="Bush5" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -6.5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="bushcut" type="AudioStreamPlayer2D" parent="." groups=[
"bush",
]]
stream = ExtResource( 5 )
